Adds database properties to create a connection to a PostgreSQL database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.config.import=database.properties
+spring.datasource.url=${db.url}
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
+spring.datasource.driver-class-name=${db.driver-class-name}
+spring.jpa.hibernate.ddl-auto=${db.ddl-auto}
