--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.2</version>
+		<version>3.1.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mjh</groupId>
@@ -46,6 +46,14 @@
         	<artifactId>tomcat-embed-jasper</artifactId>
         	<scope>provided</scope>
     	</dependency>
+    	<dependency>
+   		    <groupId>org.springframework.boot</groupId>
+    	    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
