--- a/pom.xml
+++ b/pom.xml
@@ -54,14 +54,27 @@
             <groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency> 
+    	  <groupId>org.springframework.boot</groupId> 
+   	 	  <artifactId>spring-boot-starter-validation</artifactId> 
+	    </dependency>
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+        	</plugin>
 		</plugins>
 	</build>
 
